<resources>
    <string name="app_name">Simulateur physique</string>
    <string name="nameProject">Simulateur physique</string>
    <string name="gravite">Gravité</string>
    <string name="forceCentripete">Force Centripète</string>
    <string name="paradoxeJumeaux">Paradoxe des jumeaux</string>
    <string name="ondesStationnaires">Ondes Stationnaires</string>
    <string name="param_tres_de_la_force_centrip_te">Paramètres de la force centripète</string>
    <string name="masse_de_la_voiture">Masse de la voiture (kg)</string>
    <string name="vitesse_de_la_voiture">Vitesse de la voiture (km/h)</string>
    <string name="rayon_de_la_route">Rayon de la route (m)</string>
    <string name="type_de_route">Type de route</string>
    <string name="transmettre_les_param_tres">Transmettre les paramètres</string>
    <string name="sim">Lancement de la simulation</string>
    <string name="param_tres_centrip_te">Paramètres centripète</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="ajuster_les_param_tres">Ajuster les paramètres</string>
    <string name="pour_qu_un_v_hicule_puisse_effectuer_un_virage_sans_d_raper_la_force_de_frottement_f_doit_tre_sup_rieure_la_force_centrip_te_fc">Pour qu\'un véhicule puisse effectuer un virage sans déraper, la force de frottement (f) doit être supérieure à la force centripète (Fc)</string>
    <string name="boutonTexteParadoxe">Demarrer le voyage</string>
    <string name="detailsDuVoyage">Details du voyage</string>
    <string name="agePremierPassD">Age du passager au depart</string>
    <string name="ageDeuxiemePassD">Age du non passager au depart</string>
    <string name="agePremierPassR">Age du passager 1 au retour : </string>
    <string name="ageDeuxiemePassR">Age du passager 2 au retour : </string>
    <string name="vitesse">Vitesse du voyage</string>
    <string name="uniteVitesse">(en pourcentage de la vitesse de la lumiere)</string>
    <string name="retour">Retour du voyage</string>
    <string name="jumeaux">Age des jumeaux au depart</string>
    <string name="ans">ans.</string>
    <string name="dest">Destination</string>
    <string name="tex">Prenez en considération 2 jumeaux, ceux que vous voulez. L\'un partira en voyage spatial à une vitesse qui se rapproche de celle de la lumière et l\'autre restera sur terre. Au retour du voyage, le jumeau dans le vaisseau sera plus jeune car le temps dans le vaisseau aura passé plus lentement que celui sur terre. Ce phénomène s\'explique par la théorie de la relativité d\'Albert Einstein. Testez le en cliquant sur le bouton ci dessous!</string>
    <string name="paradoxe2Limite100">La vitesse choisie est plus grande ou égale à 100. Alors, il est impossible pour le voyageur de se rendre à destination!</string>
    <string name="paradoxe2Limite0">La vitesse choisie est plus petite ou égale à 0. Alors, il est impossible pour le voyageur de se rendre à destination!</string>

    <string name="a_propos">À propos</string>
    <string name="paradoxeOublierRemplirChamp">Veuillez remplir tous les champs!</string>
    <string name="d_veloppement">Développement</string>
    <string name="notions_l_mentaires">Notions élémentaires</string>
    <string name="options_et_choix">Options et choix</string>
    <string name="avec_cette_application_nous_voulons_permettre_au_grand_public_de_se_renseigner_sur_diff_rents_ph_nom_nes_physiques_de_la_vie_courante_et_d_apprendre_de_nouveaux_concepts_l_aide_de_simulations_notre_principal_souhait_est_de_faire_prendre_conscience_au_grand_public_qu_il_vit_avec_la_physique_chaque_jour_sans_vraiment_s_en_rendre_compte_non_seulement_nous_allons_faire_prendre_conscience_au_grand_public_qu_il_vit_avec_la_physique_au_quotidien_mais_nous_le_porterons_aussi_r_fl_chir_en_l_exposant_des_ph_nom_nes_qui_sont_m_connus_pour_la_plupart">Avec cette application, nous voulons permettre au grand public de se renseigner sur différents phénomènes physiques de la vie courante et d\’apprendre de nouveaux concepts à l\’aide de simulations. Notre principal souhait est de faire prendre conscience au grand public qu\’il vit avec la physique chaque jour sans vraiment s\’en rendre compte. Non seulement nous allons faire prendre conscience au grand public qu\’il vit avec la physique au quotidien, mais nous le porterons aussi à réfléchir en l\’exposant à des phénomènes qui sont méconnus pour la plupart.</string>
    <string name="avant_propos">Avant-propos</string>
    <string name="retour_au_menu_principal">Retour au menu principal</string>
    <string name="pour_continuer_le_d_veloppement_de_l_application_vous_devez_installer_android_studio_et_cloner_le_repot_pedroscocci_projet_int_grateur">Pour continuer le développement de l\’application vous devez installer Android Studio et cloner le répo PedroScocci/Projet-Int-grateur.</string>
    <string name="d_veloppement_de_l_application">Développement de l\'application</string>
    <string name="notions_l_mentaires_de_l_application">Notions élémentaires de l\'application</string>
    <string name="cette_application_est_s_par_e_en_4_simulateurs_le_premier_celui_de_la_gravit_montre_des_objets_qui_tombent_sur_diff_rentes_plan_tes_avec_des_gravit_s_diff_rentes_le_deuxi_me_celui_de_la_force_centrip_te_montre_une_voiture_qui_d_rape_ou_qui_ne_d_rape_pas_le_troisi_me_celui_du_paradoxe_des_jumeaux_montre_un_des_jumeaux_qui_reste_sherbrooke_et_l_autre_qui_quitte_la_terre_le_quatri_me_celui_des_ondes_montre_le_mouvement_d_une_corde_certaines_fr_quences_les_4_simulateurs_ont_une_section_d_informations_pour_expliquer_les_ph_nom_nes_plus_en_d_tails_plusieurs_param_tres_sont_modifiables_et_ces_modifications_sont_illustr_es_l_aide_d_animation">Cette application est séparée en 4 simulateurs. Le premier, celui de la gravité, montre des objets qui tombent sur différentes planètes avec des gravités différentes. Le deuxième, celui de la force centripète, montre une voiture qui dérape ou qui ne dérape pas. Le troisième, celui du paradoxe des jumeaux, montre un des jumeaux qui reste à Sherbrooke et l\’autre qui quitte la Terre. Le quatrième, celui des ondes, montre le mouvement d\’une corde à certaines fréquences. Les 4 simulateurs ont une section d\’informations pour expliquer les phénomènes plus en détails, plusieurs paramètres sont modifiables et ces modifications sont illustrées à l\’aide d\’animation.</string>
    <string name="options_et_choix_menu">Options et choix de menu</string>
    <string name="apr_s_avoir_choisi_votre_simulation_vous_serez_amener_une_fen_tre_d_informations_d_o_vous_pourrez_vous_rendre_la_fen_tre_des_param_tres_l_aide_d_un_bouton_ensuite_vous_pourrez_choisir_les_param_tres_d_sir_s_et_les_transmettre_l_aide_d_un_bouton_et_vous_pourrez_d_buter_la_simulation_l_aide_d_un_autre_bouton_il_est_possible_de_naviguer_entre_les_fen_tres_l_aide_du_menu_situ_dans_le_coin_en_haut_droite_de_l_cran">Au menu principal, l’utilisateur aura l’option entre 4 boutons qui dirigent à la simulation indiquée et il aura accès au guide d’utilisateur via une barre de menu située dans le coin en haut à droite de l’écran. Après avoir choisi votre simulation, vous serez amenés à une fenêtre d\’informations d\’où vous pourrez vous rendre à la fenêtre des paramètres à l\’aide d\’un bouton. Ensuite vous pourrez choisir les paramètres désirés sur des champs de saisie et des listes déroulantes et les transmettre à l\’aide d\’un bouton et vous pourrez débuter la simulation à l\’aide d\’un autre bouton.</string>
    <string name="param_gravite">Paramètres</string>
    <string name="planete">Planète:</string>
    <string name="masse_1">Masse objet 1 (kg):</string>
    <string name="hauteur_m">Hauteur (m):</string>
    <string name="txtbout_ok">OK</string>
    <string name="txtbout_retour">Retour</string>
    <string name="hauteur_min">0.0 m</string>
    <string name="texte_vfinale">Vitesse finale approximative:</string>
    <string name="texte_energie">Énergie d\'impact: </string>
    <string name="paradoxe4BRetourMenu">Retour au menu principal</string>
    <string name="texte">Texte</string>
    <string name="retour2">Retour</string>
    <string name="commencer">Commencer</string>
    <string name="titreMenuPrincipal">Simulateur de physique</string>
    <string-array name="liste_planetes">
        <item>Mercure</item>
        <item>Venus</item>
        <item>Terre</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturne</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="liste_objets">
        <item>Melon d\'eau</item>
        <item>Voiture</item>
        <item>Bloc de ciment</item>
        <item>Bloc de glace</item>
        <item>Oeuf</item>
    </string-array>
</resources>
