<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.scoccipe.projetphysique.MenuPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:background="@color/grisMate">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titreMenuPrincipal"
            android:textColor="@color/noir"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"/>

        <Button android:id="@+id/Gravite"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/gravite"
            android:textSize="30sp"
            android:textColor="@color/blanc"
            android:background="@color/noir" />

        <Button android:id="@+id/ForceCentripete"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/forceCentripete"
            android:textSize="30sp"
            android:textColor="@color/blanc"
            android:background="@color/noir"/>

        <Button android:id="@+id/Paradoxe"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/paradoxeJumeaux"
            android:textSize="30sp"
            android:textColor="@color/blanc"
            android:background="@color/noir"/>

        <Button android:id="@+id/Onde"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/ondesStationnaires"
            android:textSize="30sp"
            android:textColor="@color/blanc"
            android:background="@color/noir"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
