<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd"
    tools:context="com.example.scoccipe.projetphysique.MenuPrincipal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/bouton_Onde"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bouton_ForceCentripete"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/ondesStationnaires" />

        <Button
            android:id="@+id/bouton_Paradoxe"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_alignTop="@+id/bouton_Onde"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/bouton_Onde"
            android:layout_weight="1"
            android:text="@string/paradoxeJumeaux" />

        <Button
            android:id="@+id/bouton_ForceCentripete"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_alignStart="@+id/bouton_Paradoxe"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:text="@string/forceCentripete" />

        <Button
            android:id="@+id/bouton_Gravite"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/bouton_Onde"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:text="@string/gravite" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="35dp"
            android:background="#3d84a7"
            android:text="@string/app_name" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
