<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.scoccipe.projetphysique.Developpement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/d_veloppement_de_l_application"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/pour_continuer_le_d_veloppement_de_l_application_vous_devez_installer_android_studio_et_cloner_le_repot_pedroscocci_projet_int_grateur"
        />
        <Button
            android:id="@+id/button_dev"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/retour_au_menu_principal" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>