<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paradoxe2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailsDuVoyage"
            android:textSize="40dp"
            android:gravity="center"
            android:textColor="@color/noir"
            android:paddingBottom="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumeaux"
                    android:textSize="20dp"
                    android:textColor="@color/noir"/>
                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/vv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/vitesse"
            android:textSize="20dp"
            android:textColor="@color/noir"/>
        <EditText
            android:id="@+id/vitesse"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:textColor="@color/noir"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:text="@string/uniteVitesse"
            android:gravity="center"
            android:paddingBottom="50dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner">
        </Spinner>
        <Button
            android:id="@+id/paradoxe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonTexteParadoxe"
            android:textColor="@color/noir"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>