<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Paradoxe">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/ciel"
        android:theme="@style/Ciel">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paradoxeJumeaux"
            android:textColor="@color/blanc"
            android:textSize="40sp"
            android:gravity="center"
            android:paddingBottom="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex"
            android:textSize="20sp"
            android:textColor="@color/blanc"
            android:textAlignment="center"
            android:paddingBottom="50dp" />
        <Button
            android:id="@+id/boutonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonTexteParadoxe"
            android:textAlignment="center"
            android:textColor="@color/blanc"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/noir"/>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>