<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Titre_menuP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/couleur_textes"
            android:textSize="35sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/Onde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@color/transparent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ondesStationnaires"
            android:textColor="@color/couleur_textes"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Paradoxe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/transparent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/paradoxeJumeaux"
            android:textSize="15sp"
            android:textColor="@color/couleur_textes"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/ForceCentripete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/transparent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/forceCentripete"
            android:textSize="15sp"
            android:textColor="@color/couleur_textes"
            android:textStyle="bold"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>